@@ -269,15 +269,17 @@ class ForkableModel(models.Model):
         # non-relational field, perform a deepcopy to ensure no mutable nonsense
         setattr(target, accessor, deepcopy(value))
 
-    def fork(self, target=None, fields=None, exclude=('pk',), deep=False, commit=False, cache=None):
+    def fork(self, *args, **kwargs):
         """Creates a fork of the reference object. If an object is supplied, it
         effectively gets reset relative to the reference object.
         """
+        target = self.__class__()
+        return self.reset(target, *args, **kwargs)
+
+    def reset(self, target, fields=None, exclude=('pk',), deep=False, commit=False, cache=None):
+        "Resets the specified target relative to ``self``"
         if target and not isinstance(target, self.__class__):
             raise TypeError('the object supplied must be of the same type as the reference')
-
-        if not target:
-            target = self.__class__()
 
         if not hasattr(target, '_forkstate'):
             # no fields are defined, so get the default ones for shallow or deep
